
syntax = "proto3";
import "Code.proto";
import "Common.proto";
package Message;

message C_PushTest { // IMessage
  string v = 1;
}

//测试
message S_PushTest { // IMessage
  string v = 1;
}

message C2S_TestMessage { // IRequest
	string text = 1;
}

message S2C_TestMessage { //IResponse
	string text = 1;
}

//登录游戏服务器
message C2S_Login // IRequest
{
  int64 ` = 1; // 帐号
  uint64 GateId = 2;
  bool isReconnet = 3; // 是否短线重连
}
message Formation {
  repeated int32 heros = 1;      //阵上英雄
  repeated uint64 artifacts = 2; //阵上圣器
}

message WorldData {
  map<int32, Item> innerBag = 1; //对应的世界内的背包
}

//玩家数据
message PlayerData {
  uint64 id = 1;
  string name = 2;
  // int32 lv = 3; //等级用经验换算
  int64 exp = 4;
  int32 currentCareer = 5;        //当前使用的职业
  map<int32, int64> careerBag = 6;     //所有职业对应的熟练度
  map<int32, Item> itemBag = 7;        //道具背包--角色背包
  map<int32, Hero> heroBag = 8;        //武将背包
  map<uint64, Equip> equipBag = 9;     //装备背包
  map<uint64, BtCard> btCardBag = 10;  //战斗技能卡背包
  map<uint64, Equip> ArtifactBag = 11; //圣器背包
  Formation formation = 12;            //阵上
}
message S2C_Login // IResponse
{
  PlayerData playerData = 1; //玩家数据--和角色无关的数据--如充值获得的宝石等
}

message C2S_SelectCareer {   // IRequest
  int32 careerType = 1; //职业
}
message S2C_SelectCareer { // IResponse
}

//同步奖励数据变化
message S_GiveReward {        // IMessage
  map<int32, int64> items = 1; //道具最终值 [等级,经验,货币,道具]
  repeated Item itemsDisplay = 2; //道具变化值显示值 [等级,经验,货币,道具]
}

message C2S_CareerLvUp {     // IRequest
  int32 careerType = 1; //职业
}
message S2C_CareerLvUp { // IResponse
  int32 lv = 2;
}
message C2S_HeroLvUp { // IRequest
  int32 heroId = 1;
}
message S2C_HeroLvUp { // IResponse
  int32 lv = 1;
}
message C2S_QualityUpgrade { // IRequest
  int32 heroId = 1;
}
message S2C_QualityUpgrade { // IResponse
  int32 quality = 1;
}
message C2S_StarUpgrade { // IRequest
  int32 heroId = 1;
}
message S2C_StarUpgrade { // IResponse
  int32 starLv = 1;
}
message C2S_BtUpgrade { // IRequest
  int32 heroId = 1;
}
message S2C_BtUpgrade { // IResponse
  int32 btLv = 1;
}
message C2S_EquipLvUp { // IRequest
  uint64 equipId = 1;
}
message S2C_EquipLvUp { // IResponse
  int32 lv = 1;
}
message C2S_EquipStarUp { // IRequest
  uint64 equipId = 1;
}
message S2C_EquipStarUp { // IResponse
  int32 starLv = 1;
}
message C2S_ArtifactLvUp { // IRequest
  uint64 artifactId = 1;
}
message S2C_ArtifactLvUp { // IResponse
  int32 lv = 1;
}
message C2S_ArtifactStarUp { // IRequest
  uint64 artifactId = 1;
}
message S2C_ArtifactStarUp { // IResponse
  int32 starLv = 1;
}